# typelalr

./: .gitignore  Cargo.toml  README.md  basic_lisp.tlalr  chars.ts  grammar.ts  grammar_util.ts  pnpm-lock.yaml  todo.md  tsconfig.json
src/: codegen.rs  dfa.rs  lalr.rs  lex.rs  lib.rs  nfa.rs  option_usize.rs
src/codegen/: lex_gen.rs  parse_gen.rs
src/lalr/: first.rs  item.rs  table.rs
src/lex/: dfa.rs  lex.rs  nfa.rs
src/parser/: ast.rs  grammar.lalrpop  mod.rs  support.rs
ts/: chars.ts  lex.ts  lex_state.gen.ts  parse.ts  parse_state2.gen.ts  type.ts  util.ts
