[package]
name = "typelalr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6.3"
bumpalo = { version="3.11.0", features=["collections"] }
indexmap = "1.9.1"
lalrpop-util = { version = "0.19.8", features = ["std", "lexer"] }
regex = "1.6.0"
regex-syntax = "0.6.27"

[build-dependencies]
lalrpop = "0.19.7"
